unpackaged/main/default/objects/project_cloud__Issue__c/project_cloud__Issue__c.object-meta.xml
<CustomObject>
    <description>Issues that are raised during the project such as defects or enhancements</description>
    <label>Deprecated (Issues &amp; Risks)</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated (Issues &amp; Risks)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>