unpackaged/main/default/objects/project_cloud__Issue__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <inlineHelpText>A description of what the issue is about</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>