unpackaged/main/default/objects/project_cloud__Issue__c/fields/project_cloud__Origin__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Origin__c</fullName>
    <inlineHelpText>The origin of the issue</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Project Team</fullName>
                <default>true</default>
                <label>Project Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>