unpackaged/main/default/objects/project_cloud__Issue__c/fields/project_cloud__Priority__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Priority__c</fullName>
    <inlineHelpText>The priority that the issue has within the organization</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>