unpackaged/main/default/objects/project_cloud__Issue__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <inlineHelpText>The project task that the issue is related to</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipName>Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>