unpackaged/main/default/objects/project_cloud__Issue__c/validationRules/project_cloud__Issues_Risk_Deprecated.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Issues_Risk_Deprecated</fullName>
    <active>true</active>
    <description>The Issues &amp; Risk object has been deprecated, to create a Issues &amp; Risk use the Ticket Object</description>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>The Issues &amp; Risk object has been deprecated, to create a Issues &amp; Risk use the Ticket Object</errorMessage>
</ValidationRule>