unpackaged/main/default/objects/project_cloud__Issue__c/validationRules/project_cloud__Priority_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Priority_Is_Required</fullName>
    <active>false</active>
    <description>Check if Priority field is filled.</description>
    <errorConditionFormula>ISBLANK(TEXT(project_cloud__Priority__c))</errorConditionFormula>
    <errorDisplayField>project_cloud__Priority__c</errorDisplayField>
    <errorMessage>You must enter an issue priority</errorMessage>
</ValidationRule>