unpackaged/main/default/objects/project_cloud__Issue__c/validationRules/project_cloud__Status_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Status_Is_Required</fullName>
    <active>false</active>
    <description>Check if Status__c field has any value.</description>
    <errorConditionFormula>ISBLANK(TEXT(project_cloud__Status__c))</errorConditionFormula>
    <errorDisplayField>project_cloud__Status__c</errorDisplayField>
    <errorMessage>You must enter an issue status</errorMessage>
</ValidationRule>