unpackaged/main/default/objects/project_cloud__Issue__c/validationRules/project_cloud__Type_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Type_Is_Required</fullName>
    <active>false</active>
    <description>Check if the Type__c field has any value</description>
    <errorConditionFormula>ISBLANK(TEXT(project_cloud__Type__c))</errorConditionFormula>
    <errorDisplayField>project_cloud__Type__c</errorDisplayField>
    <errorMessage>You must enter an issue type</errorMessage>
</ValidationRule>